--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ serde.workspace = true
 chrono.workspace = true
 tokio.workspace = true
 tokio-util.workspace = true
+tokio-stream.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 itertools.workspace = true
@@ -25,6 +26,7 @@ bincode.workspace = true
 trait-variant.workspace = true
 hex.workspace = true
 futures-core.workspace = true
+futures-util.workspace = true
 serde_json.workspace = true
 base64.workspace = true
 
@@ -47,8 +49,6 @@ tracing-subscriber = "0.3.17"
 miette = { version = "7.6.0", features = ["fancy"] }
 async-trait = "0.1.81"
 bytes = "1.9.0"
-tokio-stream = { version = "0.1.14", features = ["sync"] }
-futures-util = "0.3.28"
 async-stream = "0.3.5"
 serde_with = "3.8.1"
 protoc-wkt = "1.0.0"
@@ -125,11 +125,13 @@ tracing = "0.1.37"
 itertools = "0.13.0"
 bincode = "1.3.3"
 futures-core = "0.3.31"
+futures-util = "0.3.28"
 trait-variant = "0.1.2"
 serde = { version = "1.0.136", features = ["derive"] }
 chrono = { version = "0.4.39", default-features = false }
 tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
+tokio-stream = { version = "0.1.14", features = ["sync"] }
 tower = "0.4"
 tower-http = { version = "0.6.1", features = ["cors", "trace"] }
 serde_json = "1.0.122"
