--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -12,7 +12,12 @@ serde.workspace = true
 chrono.workspace = true
 paste = "1.0.15"
 
+serde_json = { workspace = true, optional = true }
+
 [dev-dependencies]
 hex = "0.4.3"
 itertools = "0.14.0"
 serde_json = "1.0.140"
+
+[features]
+include-genesis = ["serde_json"]
