chore: Move GRPC to its own crate

--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 pallas.workspace = true
+tokio.workspace = true
 dolos-core = { path = "../core" }
 rand = "0.9.1"
 
