chore: fix cargo release config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,6 +142,7 @@ base64 = "0.22.1"
 [workspace.metadata.release]
 push = false
 publish = false
+tag-name = "v{{version}}"
 pre-release-commit-message = "release: v{{version}}"
 pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
 
