--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dolos-cardano"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 dolos-core = { path = "../core" }
