--- a/crates/redb/Cargo.toml
+++ b/crates/redb/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dolos-redb"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 tracing.workspace = true
