--- a/crates/trp/Cargo.toml
+++ b/crates/trp/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dolos-trp"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
 base64.workspace = true
