refactor: use tx3 built-in resolver (#601)

--- a/crates/trp/Cargo.toml
+++ b/crates/trp/Cargo.toml
@@ -24,14 +24,19 @@ jsonrpsee = { version = "0.24.9", features = ["server"] }
 opentelemetry = "0.30.0"
 opentelemetry_sdk = "0.30.0"
 
-tx3-lang = "0.8.2"
-tx3-cardano = "0.8.2"
+tx3-lang = "0.10.1"
+tx3-cardano = "0.10.1"
+tx3-resolver = "0.10.1"
+
 # tx3-lang = { path = "../../../../tx3-lang/tx3/crates/tx3-lang" }
 # tx3-cardano = { path = "../../../../tx3-lang/tx3/crates/tx3-cardano" }
+# tx3-resolver = { path = "../../../../tx3-lang/tx3/crates/tx3-resolver" }
+
 # tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
 # tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
+# tx3-resolver = { git = "https://github.com/tx3-lang/tx3.git" }
 
-tx3-sdk = { version = "0.4.0" }
+tx3-sdk = { version = "^0" }
 # tx3-sdk = { path = "../../../../tx3-lang/rust-sdk/sdk" }
 # tx3-sdk = { git = "https://github.com/tx3-lang/rust-sdk.git" }
 
