--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ base64.workspace = true
 dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano", features = ["include-genesis"] }
 dolos-redb = { path = "crates/redb" }
+dolos-redb3 = { path = "crates/redb3", optional = true }
 dolos-minibf = { path = "crates/minibf", optional = true }
 dolos-trp = { path = "crates/trp", optional = true }
 
@@ -99,6 +100,7 @@ mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
 phase2 = ["pallas/phase2", "dolos-core/phase2", "dolos-minibf/phase2"]
+unstable = ["dolos-core/unstable", "dolos-cardano/unstable", "dolos-testing/unstable", "dolos-redb3"]
 
 # Service features
 grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
@@ -114,7 +116,7 @@ inherits = "release"
 lto = "thin"
 
 [workspace]
-members = ["crates/cardano", "crates/core", "crates/testing", "crates/minibf", "crates/redb", "xtask"]
+members = ["crates/cardano", "crates/core", "crates/testing", "crates/minibf", "crates/redb", "xtask", "crates/redb3"]
 
 [workspace.package]
 version = "0.28.0"
