--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,7 +100,7 @@ mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
 phase2 = ["pallas/phase2", "dolos-core/phase2", "dolos-minibf/phase2"]
-unstable = ["dolos-core/unstable", "dolos-cardano/unstable", "dolos-testing/unstable", "dolos-redb3"]
+unstable = ["dolos-core/unstable", "dolos-cardano/unstable", "dolos-testing/unstable", "dolos-redb3/unstable"]
 
 # Service features
 grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
