--- a/crates/testing/Cargo.toml
+++ b/crates/testing/Cargo.toml
@@ -10,7 +10,9 @@ rand = "0.9.1"
 
 # optional dependencies for toy domain
 dolos-redb = { path = "../redb", optional = true }
+dolos-redb3 = { path = "../redb3", optional = true }
 dolos-cardano = { path = "../cardano", optional = true }
+
 tokio-stream = { workspace = true, optional = true }
 futures-core = { workspace = true, optional = true }
 futures-util = { workspace = true, optional = true }
@@ -21,6 +23,7 @@ default = []
 toy-domain = [
     "dolos-core/phase2",
     "dolos-redb",
+    "dolos-redb3",
     "dolos-cardano/include-genesis",
     "tokio-stream",
     "futures-core",
