feat(minibf): implement /assets/{asset} endpoint

--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -10,6 +10,7 @@ thiserror.workspace = true
 tracing.workspace = true
 serde.workspace = true
 chrono.workspace = true
+hex.workspace = true
 paste = "1.0.15"
 
 serde_json = { workspace = true, optional = true }
