feat: added tx script logs in mempool error

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,9 +129,9 @@ readme = "README.md"
 authors = ["TxPipe <hello@txpipe.io>"]
 
 [workspace.dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
+# pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
 # pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
-# pallas = { path = "../pallas/pallas", features = ["hardano"] }
+pallas = { path = "../pallas/pallas", features = ["hardano"] }
 
 thiserror = "2.0.12"
 hex = "0.4.3"
