--- a/Cargo.toml
+++ b/Cargo.toml
@@ -146,7 +146,7 @@ tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 tower = "0.4"
-tower-http = { version = "0.6.1", features = ["cors", "trace"] }
+tower-http = { version = "0.6.1", features = ["cors", "trace", "normalize-path"] }
 serde_json = "1.0.122"
 base64 = "0.22.1"
 
