--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0.140"
 bech32 = "0.11.0"
 blockfrost-openapi = "0.1.75"
 chrono.workspace = true
+crc = "3.3.0"
 
 [features]
 phase2 = ["pallas/phase2"]
