--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     needs: check
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14, macos-13]
+        os: [ubuntu-latest, macos-14, macos-13, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -54,6 +54,7 @@ jobs:
           args: --workspace --all-targets
 
       - name: Run external smoke tests
+        if: runner.os != 'Windows'
         uses: actions-rs/cargo@v1
         with:
           command: run
