--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ futures-core.workspace = true
 futures-util.workspace = true
 serde_json.workspace = true
 base64.workspace = true
+reqwest.workspace = true
 
 dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano", features = ["include-genesis"] }
@@ -60,7 +61,6 @@ toml = { version = "0.8.13", optional = true }
 console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.34"
 tar = "0.4.41"
-reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 paste = "1.0.15"
 
 
@@ -148,6 +148,7 @@ tower = "0.4"
 tower-http = { version = "0.6.1", features = ["cors", "trace", "normalize-path"] }
 serde_json = "1.0.122"
 base64 = "0.22.1"
+reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 
 [workspace.metadata.release]
 push = false
