--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -12,6 +12,8 @@ pallas.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 itertools.workspace = true
+chrono.workspace = true
+reqwest.workspace = true
 
 dolos-core = { path = "../core" }
 dolos-cardano = { path = "../cardano" }
@@ -21,5 +23,4 @@ hex = "0.4.3"
 serde_json = "1.0.140"
 bech32 = "0.11.0"
 blockfrost-openapi = "0.1.75"
-chrono.workspace = true
 crc = "3.3.0"
