chore: update pallas crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,9 +128,9 @@ readme = "README.md"
 authors = ["TxPipe <hello@txpipe.io>"]
 
 [workspace.dependencies]
-# pallas = { git = "https://github.com/txpipe/pallas.git", rev = "1d7a0d6", features = ["hardano", "phase2"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", rev = "b9175a7", features = ["hardano", "phase2"] }
 # pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
-pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }
+# pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }
 
 thiserror = "2.0.12"
 hex = "0.4.3"
