--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,6 +10,8 @@ trait-variant.workspace = true
 itertools.workspace = true
 tracing.workspace = true
 futures-core.workspace = true
+rayon.workspace = true
 
 # TODO: we shouldn't need Pallas in core
 pallas.workspace = true
+hex.workspace = true
