refactor: turn WAL into a sequential delta store

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,3 +15,6 @@ rayon.workspace = true
 # TODO: we shouldn't need Pallas in core
 pallas.workspace = true
 hex.workspace = true
+
+[dev-dependencies]
+proptest = "1.7.0"
