--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -58,6 +58,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [build]
+    env:
+        GIT_REVISION: "{{ github.sha }}"
 
     permissions:
       contents: read
