chore(minibf): add root and health endpoints (#663)

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,8 @@ jobs:
             args: "--locked --release"
 
     runs-on: ${{ matrix.build_on }}
+    env:
+        GIT_REVISION: "${{ github.sha }}"
 
     steps:
       - name: checkout repository
