--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ serde_json.workspace = true
 base64.workspace = true
 reqwest.workspace = true
 rayon.workspace = true
+bech32.workspace = true
 
 dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano", features = ["include-genesis"] }
@@ -43,7 +44,6 @@ dolos-trp = { path = "crates/trp", optional = true }
 gasket = { version = "^0.9", features = ["derive"] }
 # gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
 
-bech32 = "0.11.0"
 clap = { version = "4.5.37", features = ["derive"] }
 log = "0.4.18"
 config = { version = "0.14.1", default-features = false, features = ["toml", "json"] }
@@ -115,7 +115,7 @@ inherits = "release"
 lto = "thin"
 
 [workspace]
-members = ["crates/cardano", "crates/core", "crates/testing", "crates/minibf", "crates/redb", "xtask", "crates/redb3"]
+members = ["crates/cardano", "crates/core", "crates/testing", "crates/minibf", "crates/redb", "xtask", "crates/redb3", "crates/test-vectors"]
 
 [workspace.package]
 version = "0.32.0"
@@ -149,6 +149,7 @@ tower = "0.4"
 tower-http = { version = "0.6.1", features = ["cors", "trace", "normalize-path"] }
 serde_json = "1.0.122"
 base64 = "0.22.1"
+bech32 = "0.11.0"
 reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 rayon = "1.11.0"
 
