--- a/crates/test-vectors/Cargo.toml
+++ b/crates/test-vectors/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 bech32.workspace = true
 chrono.workspace = true
+hex.workspace = true
 itertools.workspace = true
 pallas.workspace = true
 reqwest.workspace = true
@@ -27,3 +28,4 @@ clap = { version = "4.5.37", features = ["derive"] }
 handlebars = "6.3.2"
 miette = { version = "7.6.0", features = ["fancy"] }
 tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
+tracing-subscriber = "0.3.17"
