--- a/crates/test-vectors/Cargo.toml
+++ b/crates/test-vectors/Cargo.toml
@@ -19,7 +19,7 @@ tower.workspace = true
 tracing.workspace = true
 
 dolos-core = { path = "../core" }
-dolos-cardano = { path = "../cardano" }
+dolos-cardano = { path = "../cardano", features = ["include-genesis"] }
 dolos-redb3 = { path = "../redb3" }
 
 bb8 = "0.9.0"
@@ -27,5 +27,5 @@ bb8-postgres = "0.9.0"
 clap = { version = "4.5.37", features = ["derive"] }
 handlebars = "6.3.2"
 miette = { version = "7.6.0", features = ["fancy"] }
-tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
+tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1", "with-chrono-0_4"] }
 tracing-subscriber = "0.3.17"
