--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -20,6 +20,7 @@ rayon = "1.11.0"
 
 serde_json = { workspace = true, optional = true }
 self_cell = "1.2.0"
+num-rational = "0.4.2"
 
 [dev-dependencies]
 hex = "0.4.3"
