--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,7 +118,7 @@ lto = "thin"
 members = ["crates/cardano", "crates/core", "crates/testing", "crates/minibf", "crates/redb", "xtask", "crates/redb3", "crates/test-vectors"]
 
 [workspace.package]
-version = "0.32.0"
+version = "1.0.0-beta.0"
 edition = "2021"
 repository = "https://github.com/txpipe/dolos"
 homepage = "https://github.com/txpipe/dolos"
