--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,27 +11,28 @@ readme.workspace = true
 authors.workspace = true
 
 [dependencies]
-pallas.workspace = true
-thiserror.workspace = true
-tracing.workspace = true
-serde.workspace = true
-chrono.workspace = true
-tokio.workspace = true
-tokio-util.workspace = true
-tokio-stream.workspace = true
-tower.workspace = true
-tower-http.workspace = true
-itertools.workspace = true
+base64.workspace = true
+bech32.workspace = true
 bincode.workspace = true
-trait-variant.workspace = true
-hex.workspace = true
+chrono.workspace = true
 futures-core.workspace = true
 futures-util.workspace = true
-serde_json.workspace = true
-base64.workspace = true
-reqwest.workspace = true
+hex.workspace = true
+itertools.workspace = true
+pallas.workspace = true
 rayon.workspace = true
-bech32.workspace = true
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+tokio-stream.workspace = true
+tokio-util.workspace = true
+tokio.workspace = true
+tower-http.workspace = true
+tower.workspace = true
+tracing.workspace = true
+trait-variant.workspace = true
+xxhash-rust.workspace = true
 
 dolos-core = { path = "crates/core" }
 dolos-cardano = { path = "crates/cardano", features = ["include-genesis"] }
@@ -152,6 +153,7 @@ base64 = "0.22.1"
 bech32 = "0.11.0"
 reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
 rayon = "1.11.0"
+xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
 
 [workspace.metadata.release]
 push = false
