--- a/crates/redb3/Cargo.toml
+++ b/crates/redb3/Cargo.toml
@@ -17,7 +17,7 @@ thiserror.workspace = true
 
 dolos-core = { path = "../core" }
 
-redb = { version = "^2.6" }
+redb = { version = "3.0.2" }
 
 [dev-dependencies]
 dolos-testing = { path = "../testing" }
