chore: Add account_certs slot tag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -141,7 +141,7 @@ bincode = "1.3.3"
 futures-core = "0.3.31"
 futures-util = "0.3.28"
 trait-variant = "0.1.2"
-serde = { version = "1.0.136", features = ["derive"] }
+serde = { version = "1.0.136", features = ["derive", "rc"] }
 chrono = { version = "0.4.39", default-features = false }
 tokio = { version = "^1.47", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
