--- a/crates/redb3/Cargo.toml
+++ b/crates/redb3/Cargo.toml
@@ -14,6 +14,7 @@ itertools.workspace = true
 bincode.workspace = true
 hex.workspace = true
 thiserror.workspace = true
+xxhash-rust.workspace = true
 
 dolos-core = { path = "../core" }
 
