--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -21,6 +21,8 @@ rayon = "1.11.0"
 serde_json = { workspace = true, optional = true }
 self_cell = "1.2.0"
 num-rational = "0.4.2"
+big-int = "7.0.0"
+num-bigint = "0.4.6"
 
 [dev-dependencies]
 hex = "0.4.3"
