--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -19,6 +19,8 @@ dolos-core = { path = "../core" }
 dolos-cardano = { path = "../cardano" }
 
 axum = { version = "0.8.4", features = ["macros"] }
+num-bigint = "0.4.6"
+num-traits = "0.2.19"
 hex = "0.4.3"
 serde_json = "1.0.140"
 bech32 = "0.11.0"
