--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ base64.workspace = true
 bech32.workspace = true
 bincode.workspace = true
 chrono.workspace = true
+flate2.workspace = true
 futures-core.workspace = true
 futures-util.workspace = true
 hex.workspace = true
@@ -61,7 +62,6 @@ comfy-table = { version = "7.1.1", optional = true }
 inquire = { version = "0.7.5", optional = true }
 toml = { version = "0.8.13", optional = true }
 console-subscriber = { version = "0.3.0", optional = true }
-flate2 = "1.0.34"
 tar = "0.4.41"
 paste = "1.0.15"
 
@@ -147,6 +147,7 @@ hex = "0.4.3"
 tracing = "0.1.37"
 itertools = "0.13.0"
 bincode = "1.3.3"
+flate2 = { version = "1.1.4", features = ["zlib-rs"]}
 futures-core = "0.3.31"
 futures-util = "0.3.28"
 trait-variant = "0.1.2"
