--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -15,6 +15,7 @@ rayon.workspace = true
 # TODO: we shouldn't need Pallas in core
 pallas.workspace = true
 hex.workspace = true
+regex.workspace = true
 
 [dev-dependencies]
 proptest = "1.7.0"
