--- a/crates/trp/Cargo.toml
+++ b/crates/trp/Cargo.toml
@@ -24,17 +24,17 @@ jsonrpsee = { version = "0.24.9", features = ["server"] }
 opentelemetry = "0.30.0"
 opentelemetry_sdk = "0.30.0"
 
-tx3-lang = "0.11.4"
-tx3-cardano = "0.11.4"
-tx3-resolver = "0.11.4"
+# tx3-lang = "0.11.4"
+# tx3-cardano = "0.11.4"
+# tx3-resolver = "0.11.4"
 
 # tx3-lang = { path = "../../../../tx3-lang/tx3/crates/tx3-lang" }
 # tx3-cardano = { path = "../../../../tx3-lang/tx3/crates/tx3-cardano" }
 # tx3-resolver = { path = "../../../../tx3-lang/tx3/crates/tx3-resolver" }
 
-# tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
-# tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
-# tx3-resolver = { git = "https://github.com/tx3-lang/tx3.git" }
+tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
+tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }
+tx3-resolver = { git = "https://github.com/tx3-lang/tx3.git" }
 
 tx3-sdk = { version = "^0" }
 # tx3-sdk = { path = "../../../../tx3-lang/rust-sdk/sdk" }
