--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,6 +144,7 @@ pallas = { git = "https://github.com/txpipe/pallas.git", rev = "38546da", featur
 
 thiserror = "2.0.12"
 hex = "0.4.3"
+regex = "1.10.0"
 tracing = "0.1.37"
 itertools = "0.13.0"
 bincode = "1.3.3"
