--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -21,9 +21,10 @@ dolos-core = { path = "../core" }
 dolos-cardano = { path = "../cardano" }
 
 axum = { version = "0.8.4", features = ["macros"] }
-num-traits = "0.2.19"
-hex = "0.4.3"
-serde_json = "1.0.140"
 bech32 = "0.11.0"
 blockfrost-openapi = "0.1.75"
 crc = "3.3.0"
+futures = "0.3.31"
+hex = "0.4.3"
+num-traits = "0.2.19"
+serde_json = "1.0.140"
