--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,10 @@ gasket = { version = "^0.9", features = ["derive"] }
 
 clap = { version = "4.5.37", features = ["derive"] }
 log = "0.4.18"
-config = { version = "0.14.1", default-features = false, features = ["toml", "json"] }
+config = { version = "0.14.1", default-features = false, features = [
+    "toml",
+    "json",
+] }
 lazy_static = "1.4.0"
 tracing-subscriber = "0.3.17"
 miette = { version = "7.6.0", features = ["fancy"] }
@@ -86,7 +89,12 @@ features = ["fs", "rug-backend", "rustls-tls", "rustls-tls-webpki-roots"]
 version = "0.12.2"
 optional = true
 default-features = false
-features = ["fs", "num-integer-backend", "rustls-tls", "rustls-tls-native-roots"]
+features = [
+    "fs",
+    "num-integer-backend",
+    "rustls-tls",
+    "rustls-tls-native-roots",
+]
 
 [dev-dependencies]
 nix = { version = "0.30.1", features = ["signal"] }
@@ -104,7 +112,12 @@ debug = ["console-subscriber", "tokio/tracing"]
 
 # Service features
 grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
-minibf = ["dolos-minibf", "tower-http/cors", "tower-http/trace", "tower-http/normalize-path"]
+minibf = [
+    "dolos-minibf",
+    "tower-http/cors",
+    "tower-http/trace",
+    "tower-http/normalize-path",
+]
 trp = ["dolos-trp"]
 
 # Default features - includes all services
@@ -138,7 +151,11 @@ readme = "README.md"
 authors = ["TxPipe <hello@txpipe.io>"]
 
 [workspace.dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", rev = "df1cd7a", features = ["hardano", "phase2"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", rev = "7e8e0d5", features = [
+    "hardano",
+    "phase2",
+    "relaxed",
+] }
 # pallas = { version = "1.0.0-alpha.2", features = ["hardano", "phase2"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }
 
@@ -157,11 +174,18 @@ tokio = { version = "^1.47", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 tower = "0.4"
-tower-http = { version = "0.6.1", features = ["cors", "trace", "normalize-path"] }
+tower-http = { version = "0.6.1", features = [
+    "cors",
+    "trace",
+    "normalize-path",
+] }
 serde_json = "1.0.122"
 base64 = "0.22.1"
 bech32 = "0.11.0"
-reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.12.7", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+] }
 rayon = "1.11.0"
 xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
 num-rational = "0.4.2"
@@ -172,7 +196,14 @@ push = false
 publish = false
 tag-name = "v{{version}}"
 pre-release-commit-message = "release: v{{version}}"
-pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
+pre-release-hook = [
+    "git",
+    "cliff",
+    "-o",
+    "CHANGELOG.md",
+    "--tag",
+    "{{version}}",
+]
 
 [lints.clippy]
 result_large_err = "allow"
