--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,24 +77,12 @@ tonic-reflection = { version = "0.12.3", optional = true }
 # Common HTTP dependencies
 http = "1.3.1"
 hyper = "1.5"
-
-
-[target.'cfg(not(windows))'.dependencies.mithril-client]
-version = "0.12.2"
-optional = true
-default-features = false
-features = ["fs", "rug-backend", "rustls-tls", "rustls-tls-webpki-roots"]
-
-[target.'cfg(windows)'.dependencies.mithril-client]
-version = "0.12.2"
-optional = true
-default-features = false
-features = [
+mithril-client = { version = "0.12.2", optional = true, default-features = false, features = [
     "fs",
     "num-integer-backend",
     "rustls-tls",
-    "rustls-tls-native-roots",
-]
+    "rustls-tls-webpki-roots",
+] }
 
 [dev-dependencies]
 nix = { version = "0.30.1", features = ["signal"] }
