--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ tonic-reflection = { version = "0.12.3", optional = true }
 # Common HTTP dependencies
 http = "1.3.1"
 hyper = "1.5"
+
 mithril-client = { version = "0.12.2", optional = true, default-features = false, features = [
     "fs",
     "num-integer-backend",
@@ -139,12 +140,8 @@ readme = "README.md"
 authors = ["TxPipe <hello@txpipe.io>"]
 
 [workspace.dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", rev = "7e8e0d5", features = [
-    "hardano",
-    "phase2",
-    "relaxed",
-] }
-# pallas = { version = "1.0.0-alpha.2", features = ["hardano", "phase2"] }
+# pallas = { git = "https://github.com/txpipe/pallas.git", rev = "7e8e0d5", features = ["hardano", "phase2"] }
+pallas = { version = "1.0.0-alpha.3", features = ["hardano", "phase2"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }
 
 thiserror = "2.0.12"
