--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -19,6 +19,7 @@ tokio.workspace = true
 pallas.workspace = true
 hex.workspace = true
 regex.workspace = true
+serde_with = "3.16.0"
 
 [dev-dependencies]
 proptest = "1.7.0"
