--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,10 @@ gasket = { version = "^0.9", features = ["derive"] }
 bech32 = "0.11.0"
 clap = { version = "4.5.37", features = ["derive"] }
 log = "0.4.18"
-config = { version = "0.14.1", default-features = false, features = ["toml", "json"] }
+config = { version = "0.14.1", default-features = false, features = [
+    "toml",
+    "json",
+] }
 lazy_static = "1.4.0"
 tracing-subscriber = "0.3.17"
 miette = { version = "7.6.0", features = ["fancy"] }
@@ -79,13 +82,23 @@ hyper = "1.5"
 version = "0.12.2"
 optional = true
 default-features = false
-features = ["fs", "rug-backend", "rustls-tls", "rustls-tls-webpki-roots"]
+features = [
+    "fs",
+    "num-integer-backend",
+    "rustls-tls",
+    "rustls-tls-webpki-roots",
+]
 
 [target.'cfg(windows)'.dependencies.mithril-client]
 version = "0.12.2"
 optional = true
 default-features = false
-features = ["fs", "num-integer-backend", "rustls-tls", "rustls-tls-native-roots"]
+features = [
+    "fs",
+    "num-integer-backend",
+    "rustls-tls",
+    "rustls-tls-native-roots",
+]
 
 [dev-dependencies]
 nix = { version = "0.30.1", features = ["signal"] }
@@ -103,7 +116,12 @@ debug = ["console-subscriber", "tokio/tracing"]
 
 # Service features
 grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
-minibf = ["dolos-minibf", "tower-http/cors", "tower-http/trace", "tower-http/normalize-path"]
+minibf = [
+    "dolos-minibf",
+    "tower-http/cors",
+    "tower-http/trace",
+    "tower-http/normalize-path",
+]
 trp = ["dolos-trp"]
 
 # Default features - includes all services
@@ -115,7 +133,15 @@ inherits = "release"
 lto = "thin"
 
 [workspace]
-members = ["crates/cardano", "crates/core", "crates/testing", "crates/minibf", "crates/redb", "xtask", "crates/redb3"]
+members = [
+    "crates/cardano",
+    "crates/core",
+    "crates/testing",
+    "crates/minibf",
+    "crates/redb",
+    "xtask",
+    "crates/redb3",
+]
 
 [workspace.package]
 version = "0.32.0"
@@ -128,8 +154,8 @@ readme = "README.md"
 authors = ["TxPipe <hello@txpipe.io>"]
 
 [workspace.dependencies]
-pallas = { git = "https://github.com/txpipe/pallas.git", rev = "b9175a7", features = ["hardano", "phase2"] }
-# pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
+# pallas = { git = "https://github.com/txpipe/pallas.git", rev = "b9175a7", features = ["hardano", "phase2"] }
+pallas = { version = "1.0.0-alpha.3", features = ["hardano", "phase2"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }
 
 thiserror = "2.0.12"
@@ -146,17 +172,31 @@ tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
 tokio-util = { version = "0.7.11", features = ["rt"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 tower = "0.4"
-tower-http = { version = "0.6.1", features = ["cors", "trace", "normalize-path"] }
+tower-http = { version = "0.6.1", features = [
+    "cors",
+    "trace",
+    "normalize-path",
+] }
 serde_json = "1.0.122"
 base64 = "0.22.1"
-reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.12.7", default-features = false, features = [
+    "blocking",
+    "rustls-tls",
+] }
 
 [workspace.metadata.release]
 push = false
 publish = false
 tag-name = "v{{version}}"
 pre-release-commit-message = "release: v{{version}}"
-pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
+pre-release-hook = [
+    "git",
+    "cliff",
+    "-o",
+    "CHANGELOG.md",
+    "--tag",
+    "{{version}}",
+]
 
 [lints.clippy]
 result_large_err = "allow"
