--- a/crates/trp/Cargo.toml
+++ b/crates/trp/Cargo.toml
@@ -39,6 +39,6 @@ tx3-tir = { git = "https://github.com/tx3-lang/tx3.git" }
 [dev-dependencies]
 dolos-testing = { path = "../testing", features = ["toy-domain"] }
 
-# tx3-lang = "0.13.0"
-# tx3-lang = { path = "../../../../tx3-lang/tx3/crates/tx3-lang" }
-tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
+# tx3-sdk = "0.13.0"
+# tx3-sdk = { path = "../../../../rust-sdk" }
+tx3-sdk = { git = "https://github.com/tx3-lang/rust-sdk.git" }
