--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -22,5 +22,5 @@ axum = { version = "0.8.4", features = ["macros"] }
 hex = "0.4.3"
 serde_json = "1.0.140"
 bech32 = "0.11.0"
-blockfrost-openapi = "0.1.75"
+blockfrost-openapi = "=0.1.75"
 crc = "3.3.0"
