feat(grpc): upgrade u5c server to 0.18.1 specs (#813)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,8 +137,8 @@ readme = "README.md"
 authors = ["TxPipe <hello@txpipe.io>"]
 
 [workspace.dependencies]
-# pallas = { git = "https://github.com/txpipe/pallas.git", rev = "7e8e0d5", features = ["hardano", "phase2"] }
-pallas = { version = "1.0.0-alpha.3", features = ["hardano", "phase2"] }
+pallas = { git = "https://github.com/txpipe/pallas.git", rev = "ab27006", features = ["hardano", "phase2"] }
+# pallas = { version = "1.0.0-alpha.3", features = ["hardano", "phase2"] }
 # pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }
 
 thiserror = "2.0.12"
