--- a/crates/redb3/Cargo.toml
+++ b/crates/redb3/Cargo.toml
@@ -19,6 +19,7 @@ xxhash-rust.workspace = true
 dolos-core = { path = "../core" }
 
 redb = { version = "3.0.2" }
+redb-extras = "0.5.0"
 
 [dev-dependencies]
 dolos-testing = { path = "../testing" }
