--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ console-subscriber = { version = "0.3.0", optional = true }
 flate2 = "1.0.34"
 tar = "0.4.41"
 paste = "1.0.15"
+redb-extras = "0.6.1"
 
 
 # gRPC dependencies
