--- a/examples/sync-preview/dolos.toml
+++ b/examples/sync-preview/dolos.toml
@@ -4,10 +4,14 @@ network_magic = 2
 is_testnet = true
 
 [storage]
-version = "v1"
+version = "v3"
 path = "data"
-max_wal_history = 25920
-max_chain_history = 2592000
+
+[storage.wal]
+max_history = 25920
+
+[storage.archive]
+max_history = 2592000
 
 [genesis]
 byron_path = "byron.json"
