feat(redb): off-load block data to flat files

--- a/crates/redb3/Cargo.toml
+++ b/crates/redb3/Cargo.toml
@@ -15,6 +15,7 @@ bincode.workspace = true
 hex.workspace = true
 thiserror.workspace = true
 xxhash-rust.workspace = true
+tempfile = "3"
 
 dolos-core = { path = "../core" }
 
