--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -14,6 +14,7 @@ hex.workspace = true
 itertools.workspace = true
 num-rational.workspace = true
 num-bigint.workspace = true
+async-trait = "0.1.81"
 
 paste = "1.0.15"
 
