Fix tests and update AGENT.md

--- a/tests/external/scenarios/mainnet-20-blocks/dolos.toml
+++ b/tests/external/scenarios/mainnet-20-blocks/dolos.toml
@@ -8,9 +8,11 @@ version = "v3"
 path = "data"
 
 [storage.wal]
+backend = "redb"
 max_history = 129600
 
 [storage.archive]
+backend = "redb"
 max_history = 86400
 
 [genesis]
