--- a/xtask/templates/default-preprod.toml
+++ b/xtask/templates/default-preprod.toml
@@ -8,16 +8,8 @@ version = "v3"
 path = "./data"
 
 [storage.wal]
+backend = "redb"
 max_history = 129600
-
-[storage.archive]
-max_history = 2592000
-
-[genesis]
-byron_path = "byron.json"
-shelley_path = "shelley.json"
-alonzo_path = "alonzo.json"
-conway_path = "conway.json"
 
 [sync]
 pull_batch_size = 200
