--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,7 @@ path = "tests/external/smoke.rs"
 
 [features]
 relaxed = ["dolos-cardano/relaxed"]
+rupd-snapshot-dump = ["dolos-cardano/rupd-snapshot-dump"]
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
