--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,16 +89,25 @@ mithril-client = { version = "0.12.2", optional = true, default-features = false
 [dev-dependencies]
 anyhow = "1.0"
 comfy-table = "7.1.1"
+csv = "1"
+csv-diff = "0.1"
 nix = { version = "0.30.1", features = ["signal"] }
+serde = { workspace = true }
 tempfile = "3.20.0"
+toml = "0.8.13"
 dolos-testing = { path = "crates/testing", features = ["toy-domain"] }
 
 [[test]]
 name = "smoke"
 path = "tests/external/smoke.rs"
 
+[[test]]
+name = "cardano"
+path = "tests/cardano/main.rs"
+
 [features]
 relaxed = ["dolos-cardano/relaxed"]
+rupd-snapshot-dump = ["dolos-cardano/rupd-snapshot-dump"]
 mithril = ["mithril-client"]
 utils = ["comfy-table", "inquire", "toml"]
 debug = ["console-subscriber", "tokio/tracing"]
