--- a/xtask/templates/default-mainnet.toml
+++ b/xtask/templates/default-mainnet.toml
@@ -11,6 +11,21 @@ path = "data"
 backend = "redb"
 max_history = 129600
 
+[storage.state]
+backend = "fjall"
+
+[storage.index]
+backend = "fjall"
+
+[storage.archive]
+backend = "redb"
+
+[genesis]
+byron_path = "byron.json"
+shelley_path = "shelley.json"
+alonzo_path = "alonzo.json"
+conway_path = "conway.json"
+
 [sync]
 pull_batch_size = 100
 
