--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -15,6 +15,7 @@ itertools.workspace = true
 num-rational.workspace = true
 num-bigint.workspace = true
 async-trait = "0.1.81"
+crc = "3.3.0"
 
 paste = "1.0.15"
 
