--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -22,7 +22,7 @@ paste = "1.0.15"
 # TODO: remove rayon once we've moved parallel processing of inputs to the core crate
 rayon = "1.11.0"
 
-serde_json = { workspace = true, optional = true }
+serde_json = { workspace = true }
 self_cell = "1.2.0"
 bech32 = { workspace = true, optional = true }
 
@@ -32,6 +32,6 @@ hex = "0.4.3"
 serde_json = "1.0.140"
 
 [features]
-include-genesis = ["serde_json"]
+include-genesis = []
 relaxed = []
 rupd-snapshot-dump = ["bech32"]
