--- a/crates/cardano/Cargo.toml
+++ b/crates/cardano/Cargo.toml
@@ -24,6 +24,8 @@ rayon = "1.11.0"
 serde_json = { workspace = true, optional = true }
 self_cell = "1.2.0"
 bech32 = { workspace = true, optional = true }
+async-stream = "0.3.6"
+futures-core.workspace = true
 
 
 [dev-dependencies]
