--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -29,3 +29,5 @@ futures = "0.3.31"
 hex = "0.4.3"
 num-traits = "0.2.19"
 serde_json = "1.0.140"
+futures-core.workspace = true
+futures-util.workspace = true
