chore: remove toy-domain feature flag

--- a/crates/minibf/Cargo.toml
+++ b/crates/minibf/Cargo.toml
@@ -33,5 +33,5 @@ futures-core.workspace = true
 futures-util.workspace = true
 
 [dev-dependencies]
-dolos-testing = { path = "../testing", features = ["toy-domain"] }
+dolos-testing = { path = "../testing" }
 http-body-util = "0.1.2"
