--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,7 +97,7 @@ nix = { version = "0.30.1", features = ["signal"] }
 serde = { workspace = true }
 tempfile = "3.20.0"
 toml = "0.8.13"
-dolos-testing = { path = "crates/testing", features = ["toy-domain"] }
+dolos-testing = { path = "crates/testing" }
 
 [[test]]
 name = "smoke"
