--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -23,3 +23,7 @@ postgres = "0.19"
 postgres-native-tls = "0.5"
 bech32 = { workspace = true }
 pallas = { workspace = true }
+hdrhistogram = "7.5"
+chrono = { version = "0.4", features = ["serde"] }
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
